fix: add the scrollbar back for Chrome users

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -94,12 +94,6 @@
   padding-left: 0px !important;
 }
 
-/* Hide ion-content scrollbar */
-
-::-webkit-scrollbar {
-  display: none;
-}
-
 /*  NOTE:
       THIS IS THE SECTION USED FOR ADDING ANIMATION FOR DISPLAYING THE PAGE ELEMENTS FROM LEFT AND RIGHT
   TO REMOVE IT:
